# spicelib

./: .gitignore  .readthedocs.yaml  AGENTS.md  MANIFEST.in  Makefile  README.md  make.bat  pyproject.toml
.github/workflows/: release.yaml  unittest.yml
doc/: conf.py  index.rst  requirements.txt
doc/classes/: asc_editor.rst  editor_classes.rst  editors.drawio  logreader.rst  ltlogreader.rst  ltspice_simulator.rst  ngspice_simulator.rst  qlogreader.rst  qsch_editor.rst  qspice_simulator.rst  raw_classes.rst  raw_read.rst  raw_write.rst  sim_batch.rst  sim_client.rst  sim_runner.rst  sim_server.rst  sim_simulator.rst  sim_stepper.rst  simulation_classes.rst  simulator_classes.rst  simulator_sim.rst  spice_circuit.rst  spice_editor.rst  trace.rst  write_trace.rst  xyce_simulator.rst
doc/media/: Singleton approach.drawio
doc/modules/: SemiOpLogReader.rst  client_server.rst  read_netlist.rst  read_rawfiles.rst  read_steps.rst  run_simulations.rst  sim_analysis.rst  write_rawfiles.rst
doc/utilities/: LTSteps.rst  asc_to_qsch.rst  histogram.rst  ltsteps.rst  readme_update.rst  utilities.rst
doc/varia/: LTSpice.rst  raw_file.rst
examples/: dc_no_step.py  edit_semiconductors.py  ltsteps_example.py  ngspice_batch.py  ngsteps.py  prepare_montecarlo.py  prepare_worst_case.py  qspice_example.py  qspice_raw_read.py  raw_plotting.py  raw_read_example.py  raw_write_example.py  run_fast_worst_case.py  run_montecarlo.py  run_sensitivity.py  run_worst_case.py  sim_client_example.py  sim_runner_asc_example.py  sim_runner_callback_example.py  sim_runner_callback_process_example.py  sim_runner_example.py  sim_server.py  sim_server_example.py  sim_stepper_example.py  spice_editor_doc_example.py  spice_editor_example.py  sub_circuit_asc_edits.py  sub_circuit_edits.py  sub_circuit_qsch_edits.py
examples/testfiles/: AC - STEP.net  AC - STEP_1.raw  AC.net  AC_1.ascii.raw  AC_1.raw  Batch_Test.asc  Batch_Test.net  Batch_Test_1.raw  Batch_Test_Combine.raw  Batch_Test_Simple.asc  DC op point - STEP.net  DC op point - STEP.qsch  DC op point - STEP_1.qraw  DC op point - STEP_1.raw  DC op point.net  DC op point_1.qraw  DC op point_1.raw  DC sweep.asc  DC sweep.net  DC sweep.qsch  Fourier_30MHz.asc  Fourier_30MHz_1.raw  Noise.net  Noise_updated.net  PA98.asc  PA98.asy  PA98.lib  QSPICE_Batch_Test.net  QSPICE_Batch_Test.qsch  QSPICE_Batch_Test_1.meas  QSPICE_TRAN - STEP.net  QSPICE_TRAN - STEP.qsch  QSPICE_TRAN - STEP_1.meas  QSPICE_TRAN - STEP_1.qraw  Qspice_bad_param.qsch  Qspice_bug_embedded_subckt.qsch  Qspice_bug_floating_net.qsch  Qspice_bug_floating_net_X1.qsch  Qspice_top.qsch  TRAN - STEP.net  (+74 more)
reproducing_error/: DMN61D9UDWQ.asy  DMN61D9UDWQ.spice.txt  LPF_3rd.asc  drawing.asc  test.py
spicelib/: Histogram.py  LTSteps.py  __init__.py  rawplot.py  run_server.py
spicelib/client_server/: sim_client.py  sim_server.py  srv_sim_runner.py
spicelib/editor/: __init__.py  asc_editor.py  asy_reader.py  base_editor.py  base_schematic.py  base_subcircuit.py  editor_errors.py  ltspice_utils.py  primitives.py  qsch_editor.py  spice_components.py  spice_editor.py  spice_file.py  spice_subcircuit.py  spice_subcircuit_instance.py  spice_utils.py  updates.py
spicelib/log/: logfile_data.py  ltsteps.py  qspice_log_reader.py  semi_dev_op_reader.py
spicelib/parser/: __init__.py  adapters.py  dialects.py  exceptions.py  lark_transformer.py  loader.py
spicelib/raw/: lazy_raw_read.py  plot_data.py  plot_interface.py  raw_classes.py  raw_convert.py  raw_read.py  raw_write.py
spicelib/scripts/: asc_to_qsch.py  asc_to_qsch_data.xml  histogram.py  ltsteps.py  raw_convert.py  rawplot.py  readme_update.py  run_server.py
spicelib/sim/: ltspice_simulator.py  ngspice_simulator.py  process_callback.py  qspice_simulator.py  run_task.py  sim_batch.py  sim_runner.py  sim_stepping.py  simulator.py  xyce_simulator.py
spicelib/simulators/: __init__.py  ltspice_simulator.py  (+3 more)
unittests/: __init__.py  sweep_iterators_unittest.py  test_asc_editor.py  test_montecarlo.py  test_qsch_editor.py  test_qspice_rawread.py  test_raw_write.py  test_raw_writer.py  test_rawreaders.py  test_spice_editor.py  test_spicelib.py
(+107 files in other folders)
