[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
[project]
name = "spicelib"
version = "0.6"
authors = [
  { name="Nuno Brum", email="me@nunobrum.com" },
]
description = "A set of tools to Automate Spice simulations"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "psutil",
    "clipboard",
    "matplotlib",
    "keyboard",
]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["*"]  # ["*"] by default
exclude = [".idea", "doc", "doc_build", ".vscode", ".git"]  # empty by default
namespaces = true  # true by default


[project.scripts]
ltsteps = "spicelib.LTSteps:main"
histogram = "spicelib.Histogram:main"
rawplot = "spicelib.rawplot:main"
rawconvert = "spicelib.raw.raw_convert:main"
run_server = "spicelib.run_server:main"

[project.urls]
"Homepage" = "https://github.com/nunobrum/spicelib"
"Bug Tracker" = "https://github.com/nunobrum/spicelib/issues"
