[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
[project]
name = "spicelib"
version = "1.3.0"
authors = [
  { name="Nuno Brum", email="me@nunobrum.com" },
]
description = "A set of tools to Automate Spice simulations"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "psutil",
    "clipboard",
    "matplotlib",
    "keyboard",
]

keywords = ["spice", "ltspice", "qspice", "ngspice", "electronic simulator", "montecarlo", "worst-case"]

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

# [tool.setuptools]
# Include the data files in the package
# include-package-data = true

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["*"]  # ["*"] by default
exclude = [".idea", "doc", "doc_build", ".vscode", ".git"]  # empty by default
namespaces = true  # true by default


[project.scripts]
ltsteps = "spicelib.scripts.ltsteps:main"
histogram = "spicelib.scripts.histogram:main"
rawplot = "spicelib.scripts.rawplot:main"
run_server = "spicelib.scriptsrun_server:main"
asc_to_qsch = "spicelib.scripts.asc_to_qsch:main"
rawconvert = "spicelib.raw.raw_convert:main"
readme_update = "spicelib.scripts.readme_update:main"

[project.urls]
"Homepage" = "https://github.com/nunobrum/spicelib"
"Repository" = "https://github.com/nunobrum/spicelib.git"
"Bug Tracker" = "https://github.com/nunobrum/spicelib/issues"
"Author" = "https://www.nunobrum.com/"
