[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "spicelib"
version = "1.4.2"
description = "A set of tools to Automate Spice simulations"
authors = ["Nuno Brum <me@nunobrum.com>"]
readme = "README.md"
license = "GPL-3.0"
keywords = ["spice", "ltspice", "qspice", "ngspice", "electronic simulator", "montecarlo", "worst-case"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "*"
scipy = "*"
psutil = "*"
clipboard = "*"
matplotlib = "*"
keyboard = "*"

[tool.poetry.scripts]
ltsteps = "spicelib.scripts.ltsteps:main"
histogram = "spicelib.scripts.histogram:main"
rawplot = "spicelib.scripts.rawplot:main"
run_server = "spicelib.scripts.run_server:main"
asc_to_qsch = "spicelib.scripts.asc_to_qsch:main"
rawconvert = "spicelib.raw.raw_convert:main"
readme_update = "spicelib.scripts.readme_update:main"

[tool.poetry.urls]
homepage = "https://github.com/nunobrum/spicelib"
repository = "https://github.com/nunobrum/spicelib.git"
bug-tracker = "https://github.com/nunobrum/spicelib/issues"
author = "https://www.nunobrum.com/"
